<?xml version="1.0"?>
<package format="3">
  <name>cpp_turtlesim_launch</name>
  <version>0.0.0</version>
  <description>Launch turtlesim from C++ package (no C++ node)</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
