<?xml version="1.0"?>
<package format="3">
  <name>launch_basic</name>
  <version>0.0.0</version>
  <description>Launch basic package (ament_python)</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
