<?xml version="1.0"?>
<package format="3">
  <name>marker_demo_pkg</name>
  <version>0.0.0</version>
  <description>Minimal ROS 2 Jazzy package demonstrating visualization_msgs/Marker and MarkerArray in RViz.</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 実行時依存 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
