<?xml version="1.0"?>
<package format="3">
  <name>rqt_console_demo</name>
  <version>0.0.0</version>
  <description>Demo package emitting logs for rqt_console.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
